# pomidorka

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: main.rs
