[package]
name = "pomidorka"
version = "0.1.2"
authors = ["Vitaly Roslov 22212673+vitalyros@users.noreply.github.com"]
description = "Console timer for Pomodoro Technique"
homepage = "https://github.com/vitalyros/pomidorka"
license = "MIT"
exclude = [
    "alarm.ogg",
]

[dependencies]
rodio = "0.11.0"
argparse = "0.2.2"
dirs = "1.0.4"